added add function

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -7,6 +7,12 @@
     <body>
         <div id="recipe-list"></div>
         <p>Our index.html is working!</p>
+
+        <form id="add-recipe-form">
+            <input type="text" name="student-name" />
+            <input type="submit" value="Add Student" />
+        </form>
+
         <script src="script.js"></script>
     </body>
 </html>
