--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -5,8 +5,10 @@
     </head>
 
     <body>
+        <button id = "getAllRecipes">Get All recipes</button>
+        <button id = "getOneRecipe">Get One recipe</button>
         <div id="recipe-list"></div>
-        <p>Our index.html is working!</p>
+        <div id="one-recipe"></div>
         <script src="script.js"></script>
     </body>
 </html>
