extended create function

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -9,8 +9,12 @@
         <p>Our index.html is working!</p>
 
         <form id="add-recipe-form">
-            <input type="text" name="student-name" />
-            <input type="submit" value="Add Student" />
+            <input type="text" name="recipe-name" />
+            <input type="text" name="ingredientName" />
+            <input type="text" name="quantity" />
+            <input type="text" name="type" />
+            <input type="text" name="steps" />
+            <input type="submit" value="Add Recipe" />
         </form>
 
         <script src="script.js"></script>
