widened recipe form

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -78,7 +78,7 @@
         <section class="section bgimg-2">
             <div class="container">
                 <div class="columns">
-                    <div class="box column is-two-fifths">
+                    <div class="box column is-half">
                         <form id="add-recipe-form">
                             <label class="label has-text-white">Name</label>
                             <input class="input" type="text" name="recipe-name" />
