--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -11,11 +11,7 @@
     <body>        
         <section class="section bgimg-1">
             <nav class="container level">
-                <div class="level-left">
-                    <div class="level-item">
-                        <h1 class="title is-size-1 has-text-white">Gastronomy Lab</h1>
-                    </div>
-                </div>
+                <h1 class="title is-size-1 has-text-white">Gastronomy Lab</h1>
             </nav>
 
             <div class="container">
@@ -23,11 +19,8 @@
                 <button class="button is-info" id="getOneRecipe">Get One Recipe</button>
                 
                 <div class="columns">
-                    <div class="column">
+                    <div class="column is-half">
                         <br><div class="food" id="recipe-list"></div>
-                    </div>
-                    <div class="column">
-                            
                     </div>
                 </div>
                 <div class="columns">
